<resources>
    <string name="app_name">Pai</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="passwordconfirm">Confirmar contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="register">Registrarse</string>
    <string name="lbl_add">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyASs9uRpjSeQIceSZvRzykEh8vWrvsV9AU</string>


    <string-array name="carreras">
        <item>LMAD</item>
        <item>LCC</item>
        <item>LSTI</item>
        <item>LF</item>
        <item>LM</item>
        <item>LA</item>
    </string-array>


</resources>